--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -28,7 +28,7 @@ ja:
         updated_at: 更新日
     models:
       user: ユーザ
-  devise:
+  users:
     confirmations:
       confirmed: メールアドレスが確認できました。
       new:
